--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -112,12 +112,12 @@ task prepareFolly(dependsOn: dependenciesPath ? [] : [downloadFolly], type: Copy
 task prepareHermes() {
     def hermesPackagePath = findNodeModulePath(projectDir, "hermes-engine")
     if (!hermesPackagePath) {
-        throw new GradleScriptException("Could not find the hermes-engine npm package")
+        throw new Exception("Could not find the hermes-engine npm package")
     }
 
     def hermesAAR = file("$hermesPackagePath/android/hermes-debug.aar")
     if (!hermesAAR.exists()) {
-        throw new GradleScriptException("The hermes-engine npm package is missing \"android/hermes-debug.aar\"")
+        throw new Exception("The hermes-engine npm package is missing \"android/hermes-debug.aar\"")
     }
 
     def soFiles = zipTree(hermesAAR).matching({ it.include "**/*.so" })
